[gd_scene load_steps=12 format=3 uid="uid://bnr53p6hb8opr"]

[ext_resource type="Script" path="res://src/player/player.gd" id="1_lmaa6"]
[ext_resource type="Script" path="res://src/player/player_controller.gd" id="1_xfp33"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="2_00a3i"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="3_6tv36"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="4_g8366"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="5_bdihc"]

[sub_resource type="SphereMesh" id="SphereMesh_j6akr"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_iyfjn"]
albedo_color = Color(0.270588, 1, 1, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_w7qxc"]
top_radius = 0.2
bottom_radius = 0.7
height = 1.8

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fxies"]
albedo_color = Color(0.270588, 1, 1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_tpxgf"]
size = Vector3(0.4, 1.8, 0.4)

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 29
platform_floor_layers = 4294967269
platform_wall_layers = 16
script = ExtResource("1_lmaa6")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
visible = false
mesh = SubResource("SphereMesh_j6akr")
surface_material_override/0 = SubResource("StandardMaterial3D_iyfjn")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CylinderMesh_w7qxc")
surface_material_override/0 = SubResource("StandardMaterial3D_fxies")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_tpxgf")

[node name="Neck" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)

[node name="Camera3D" type="Camera3D" parent="Neck" groups=["player_camera"]]
unique_name_in_owner = true
current = true

[node name="InteractableDetector" type="RayCast3D" parent="Neck/Camera3D" groups=["interactable_detector"]]
unique_name_in_owner = true
target_position = Vector3(0, 0, -2)
collision_mask = 33

[node name="ObjectMarker" type="Marker3D" parent="Neck/Camera3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)

[node name="PlayerController" type="Node3D" parent="." node_paths=PackedStringArray("player")]
unique_name_in_owner = true
script = ExtResource("1_xfp33")
player = NodePath("..")

[node name="StateChart" type="Node" parent="PlayerController"]
unique_name_in_owner = true
script = ExtResource("2_00a3i")

[node name="Root" type="Node" parent="PlayerController/StateChart"]
script = ExtResource("3_6tv36")
initial_state = NodePath("Walk")

[node name="Walk" type="Node" parent="PlayerController/StateChart/Root"]
script = ExtResource("4_g8366")

[node name="To Jump" type="Node" parent="PlayerController/StateChart/Root/Walk"]
script = ExtResource("5_bdihc")
to = NodePath("../../Jump")
event = &"jump_pressed"
delay_in_seconds = "0.0"

[node name="To Fall" type="Node" parent="PlayerController/StateChart/Root/Walk"]
script = ExtResource("5_bdihc")
to = NodePath("../../Fall")
event = &"in_air"
delay_in_seconds = "0.0"

[node name="Jump" type="Node" parent="PlayerController/StateChart/Root"]
script = ExtResource("4_g8366")

[node name="To Fall" type="Node" parent="PlayerController/StateChart/Root/Jump"]
script = ExtResource("5_bdihc")
to = NodePath("../../Fall")
delay_in_seconds = "0.0"

[node name="Fall" type="Node" parent="PlayerController/StateChart/Root"]
script = ExtResource("4_g8366")

[node name="To Walk" type="Node" parent="PlayerController/StateChart/Root/Fall"]
script = ExtResource("5_bdihc")
to = NodePath("../../Walk")
event = &"ground_touched"
delay_in_seconds = "0.0"

[connection signal="state_entered" from="PlayerController/StateChart/Root/Jump" to="PlayerController" method="_on_jump_state_entered"]
[connection signal="state_processing" from="PlayerController/StateChart/Root/Fall" to="PlayerController" method="_on_fall_state_processing"]
